# systeminfo

./: Cargo.toml  README.md  build.rs  main.js  package-lock.json  package.json
lib/: index.js
src/: functions.rs  lib.rs  memory.rs
src/utils/: disks.rs  functions.rs  memory.rs  mod.rs
