[package]
name = "systeminfo"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.14.0"
sysinfo = "0.26.8"
compound_duration = "1.2.0"
human_bytes = "0.4.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
